[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contents-creator"
version = "0.1.0"
description = "네이버 SEO 원고 생성 엔진 — 레퍼런스 분석 기반 콘텐츠 생성"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "supabase>=2.8",
    "requests>=2.32",
    "tenacity>=9.0",
    # 브랜드 카드 트랙 (SPEC-BRAND-CARD.md §11)
    # 2026-05-11 — 정확한 버전 핀. floating >=1.47 일 때 패키지 최신화로
    # 요구 chromium revision 이 변동되어 `playwright install` 결과와
    # 어긋나면 "Executable doesn't exist at /ms-playwright/chromium_headless_shell-XXXX"
    # 에러 발생. 패키지와 브라우저 revision 의 정합성을 코드 레벨에서 보장.
    "playwright==1.49.0",    # Chromium headless full-page PNG 렌더
    "jinja2>=3.1",           # HTML 템플릿 엔진
    "python-docx>=1.1",      # docx 브랜드 소스 파싱
    "pypdf>=5.0",            # pdf 브랜드 소스 파싱 (1차)
    "pdfplumber>=0.11",      # pdf fallback (pypdf 실패 시)
    "pillow>=10.4",          # PNG 메타·분할·리사이즈
    "markdown>=3.6",         # 마크다운 → HTML 변환 (composer 도메인)
    # 순위 추적 트랙 (SPEC-RANKING.md §5)
    "apscheduler>=3.10",     # 매일 09:00 KST 자동 SERP 재크롤 (AsyncIOScheduler)
    # title_validator 형태소 매칭 (Polish Pack P4) — JVM 의존 X, wheel + C++ 바이너리
    "kiwipiepy>=0.17",
    # 하이브리드 본문 fetcher (vendor/insane_search — insane-search v0.9.1 curl-only 경로)
    "curl_cffi>=0.15",       # TLS/JA3 impersonation HTTP 클라이언트 (본문 fetch 실질 의존, 0.15 로 실측)
    "pyyaml>=6.0",           # waf_profiles.yaml 로드 (waf_detector)
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "python-multipart>=0.0.9",  # multipart/form-data — brand_studio 파일 업로드
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",            # 선택적 strict 검사용 (build-check 는 pyright 사용)
    "pyright>=1.1.400",      # 기본 type checker — pyrightconfig.json 의 basic 모드
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-requests>=2.32",
]

[tool.setuptools.packages.find]
include = ["domain*", "application*", "config*", "web*", "vendor*"]
exclude = ["tests*", "scripts*", "output*", "dev*", "tasks*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "output",
    ".venv",
    "dev",
    ".claude",
    # 벤더링된 외부 라이브러리 (insane-search v0.9.1) — 원본 스타일 린트 면제
    "vendor",
    # frontend 빌드 산출물 — Junction/symlink 가 끊겨 access denied 발생 (2026-05-04 fix).
    "web/frontend/.next",
    "web/frontend/node_modules",
    # pytest 임시 디렉터리 — Windows 권한 충돌 회피
    ".pytest-tmp",
    ".tmp-pytest2",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "N",    # pep8-naming
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI 라우터의 Query/Depends/Path 등은 함수 기본값에 호출을 두는 표준 패턴 — B008 false positive 회피
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "fastapi.Path", "fastapi.Body", "fastapi.Header", "fastapi.Form"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["bs4.*", "supabase.*", "tenacity.*", "markdown.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: 네트워크 의존 통합 스모크 (기본 skip, RUN_INSANE_SMOKE=1 로 opt-in)",
]
addopts = [
    "--cov=domain",
    "--cov=application",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=60",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "dev/*",
    "scripts/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pragma: no cover",
]
